# embedify

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  setup.py
docs/: mkdocs.yml
docs/docs/: index.md
expr_ts/: 00_prepare_data.ipynb  01_knn_baseline.ipynb  02_knn_predict.ipynb  03_construct_stock_dataset.ipynb  04_tstransformer_train.ipynb  04_tstransformer_train.py  05_tstransformer_embedding.py  06_tstransformer_test.ipynb  data_utils.py  evaluate_utils.py  nearest_indices.npy
reports/: knn_result.csv
tests/: test_tabular_dataset.py  test_wrapper.py
vectorrepr/: __init__.py  dataset.py  features.py  plots.py
vectorrepr/datasets/: __init__.py  fast_dataset.py  timeseries.py
vectorrepr/datasets/base/: __init__.py  base_dataset.py
vectorrepr/datasets/tabular/: csv_dataset.py  tabular_dataset.py  tabular_transforms.py
vectorrepr/modeling/: encoder_decoder_wrapper.py  predict.py  train.py
vectorrepr/models/: __init__.py
vectorrepr/models/time_sequence/: cnn.py  rnn.py  transformer.py
vectorrepr/sampler/: __init__.py  base_sampler.py  configurable_sampler.py  label_based_sampler.py
vectorrepr/trainer/: train_template.py
vectorrepr/trainer/contrastive/: pairwise_train.py
